--- a/index-wcopy.html
+++ b/index-wcopy.html
@@ -8,7 +8,7 @@
      <li><a href="img\mp3.mp3">mp3.mp3</a></li>
     </ul>
    </li>
-   <li>Kade
+   <li>Perfect Recoil
     <ul>
      <li><a href="Kade\bootstrap.min.css">bootstrap.min.css</a></li>
      <li><a href="Kade\averion.min.css">averion.min.css</a></li>
@@ -24,7 +24,7 @@
    </li>
    <li>download
     <ul>
-     <li><a href="download\cheat.dll">cheat.dll</a></li>
+     <li><a href="download\cheat.exe">cheat.dll</a></li>
     </ul>
    </li>
    <li>fonts
