--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@ document.onkeydown = function (event) {
 			</div>
 			</div>
 			<div class="animated fadeInUp">
-			<h1><font face="Fantasy" href="http://steamcommunity.com/profiles/76561197960387997/" style="font-size:100px" target="_blank">Kade</font></h1></div>
+			<h1><font face="Fantasy" href="http://steamcommunity.com/profiles/76561197960387997/" style="font-size:100px" target="_blank">Perfect Recoil</font></h1></div>
 			
 <p><div class="animated fadeInUp"></div>
 		<font face="courier">
